# Foundriq-platform

./: .gitignore  README.md  index.py  pyproject.toml  requirements.txt  vercel.json
api/: config.py  database.py  index.py  main.py
api/auth/: security.py
api/models/: __init__.py  project.py  report.py  user.py
api/routes/: analysis.py  auth.py  dashboard.py  projects.py
api/services/: ai_service.py
backend/: config.py  database.py  main.py
backend/auth/: security.py
backend/models/: __init__.py  project.py  report.py  user.py
backend/routes/: analysis.py  auth.py  dashboard.py  projects.py
backend/services/: ai_service.py
frontend/: analyze.html  dashboard.html  index.html  login.html  signup.html
frontend/css/: style.css
frontend/js/: animations.js  auth.js  charts.js  dashboard.js  theme.js
server/: config.py  database.py  main.py
server/auth/: security.py
server/models/: __init__.py  project.py  report.py  user.py
server/routes/: analysis.py  auth.py  dashboard.py  projects.py
server/services/: ai_service.py
